crates/swc_css_parser/tests/errors/esbuild/misc/c3bWgxp_3BNOH3BSgNg7-Q/output.stderr
error: Expected function or ident tokens
 --> $DIR/tests/errors/esbuild/misc/c3bWgxp_3BNOH3BSgNg7-Q/input.css:1:3
  |
1 | a: b {}
  |   ^

